<resources>

	<!-- Main Activity. -->
	
	
    <!-- My Bookings Strings. -->
    <string name="no_bookings_message">Go to "Events" to make a booking.</string>
    <string name="booking_listitem_content_description">Event preview</string>
    <string name="signout">Sign Out</string>
    
    <string name="app_name">Adaline Theatre House</string>
    <string name="adalinelogo">Adaline Theatre House Logo</string>
    
    <!--  About View Strings !-->
    <string name="about_header">About:</string>
    <string name="about_blurb">Adaline Theatre House opened in 2007 in a beautiful wooded glade close to the lake in the
grounds of Kilworth House Hotel in south Leicestershire. There\'s a special aura and magic
about open-air theatre on a beautiful English summer\’s evening, so what better way to experience that magic than amidst the magnificent surroundings of the Kilworth estate, 
enjoying a professional production of a standard rarely seen outside the West End of London.</string>
        
   <!-- Log In Strings --> 
   
   <string name="logininfoid">To view your personal bookings and events, please enter your email and password:</string>
   <string name="emailaddresstxt">Email Address:</string>
   <string name="passwordtxt">Password:</string>
   <string name="signinbtn">Sign In!
       </string>
   
</resources>
